[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://shaders/colr_player_shader.tres" type="Shader" id=2]
[ext_resource path="res://snake_body.png" type="Texture" id=3]
[ext_resource path="res://arraybutton.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 25, 25 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 50, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 25, 25 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = 1008.0
margin_top = 592.0
margin_right = 1008.0
margin_bottom = 592.0
__meta__ = {
"_edit_group_": true
}

[node name="up" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = -442.0
margin_top = -490.0
margin_right = 70.0
margin_bottom = 22.0
rect_rotation = -90.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )

[node name="down" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = -442.0
margin_top = -340.0
margin_right = 70.0
margin_bottom = 172.0
rect_rotation = 90.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )

[node name="right" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = -367.0
margin_top = -415.0
margin_right = 145.0
margin_bottom = 97.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )

[node name="left" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = -517.0
margin_top = -415.0
margin_right = -5.0
margin_bottom = 97.0
rect_rotation = 180.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 256, 256 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/Control/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/left" to="." method="_on_left_pressed"]
